--- a/style.css
+++ b/style.css
@@ -41,3 +41,11 @@ input[type="number"]::-webkit-inner-spin-button {
 input[type="number"] {
   -moz-appearance: textfield;
 }
+#print-area {
+    width: 580pt;
+    height: 750pt;
+    padding: 0;
+    font-family: Arial, sans-serif;
+    font-size: 12pt;
+    color: #000;
+}
